--- a/1-invitation/index.html
+++ b/1-invitation/index.html
@@ -45,7 +45,9 @@
             style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#ffffff;width:568px;">
             <tr>
               <td align="center" style="Margin: 0; padding-top: 32px; padding-bottom: 16px">
-                <img src="./img/logo.png" width="140" heigt="24" alt="Логотип PlayHTML" />
+                <img src="https://b.radikal.ru/b03/2202/2e/523399b94436.png
+                " width="140" heigt="24" alt="Логотип PlayHTML"
+                  style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" />
               </td>
             </tr>
           </table>
@@ -134,7 +136,9 @@
                             <table class="date__block2-content" width="100%" cellspacing="0" cellpadding="0" border="0">
                               <tr>
                                 <td>
-                                  <img src="./img/first_image.png" width="352px" height="286px" alt="Крудс">
+                                  <img src="https://b.radikal.ru/b11/2202/bc/5e2ef160d721.png" width="352px"
+                                    height="286px" alt="Крудс"
+                                    style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                                 </td>
                               </tr>
                             </table>
@@ -179,35 +183,38 @@
                       </table>
                       <table width="100%" cellspacing="0" cellpadding="0" border="0">
                         <tr>
-                          <td>
-                            <img src="./img/Ellipse.png" width="12" height="12"
-                              alt="маркер пункта списка в виде желтого круга" />
+                          <td valign="top">
+                            <img src="https://d.radikal.ru/d22/2202/9e/572953134135.png" width="12" height="12"
+                              alt="маркер пункта списка в виде желтого круга"
+                              style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;padding-top:5px;" />
                           </td>
                           <td>
                             <p style="Margin: 0;font-family: 'trebuchet ms', tahoma, sans-serif;
                             -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; font-size: 18px;
-                            line-height:21px;text-align:left; color:#ffffff;padding-left: 5px; Margin-bottom: 8px">Кто
+                            line-height:21px;text-align:left; color:#ffffff;padding-left: 5px; padding-bottom: 8px">Кто
                               такой
                               frontend-разработчик?</p>
                           </td>
                         </tr>
                         <tr>
-                          <td>
-                            <img src="./img/Polygon.png" width="12" height="12"
-                              alt="маркер пункта списка в виде синего треугольника" />
+                          <td valign="top">
+                            <img src="https://b.radikal.ru/b05/2202/5a/fd3235563bd2.png
+                            " width="12" height="12" alt="маркер пункта списка в виде синего треугольника"
+                              style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic;padding-top:5px;" />
                           </td>
                           <td>
                             <p style="Margin: 0;font-family: 'trebuchet ms', tahoma, sans-serif;
                             -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; font-size: 18px;
-                            line-height:21px;text-align:left; color:#ffffff;padding-left: 5px; Margin-bottom: 8px">
+                            line-height:21px;text-align:left; color:#ffffff;padding-left: 5px; padding-bottom: 8px">
                               Какие навыки сейчас
                               востребованы?</p>
                           </td>
                         </tr>
                         <tr>
                           <td>
-                            <img src="./img/Rectangle.png" width="12" height="12"
-                              alt="маркер пункта списка в виде красного квадрата аля Малевич" />
+                            <img src="https://a.radikal.ru/a40/2202/52/4c994940517b.png
+                            " width="12" height="12" alt="маркер пункта списка в виде красного квадрата аля Малевич"
+                              style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic" />
                           </td>
                           <td>
                             <p style="Margin: 0;font-family: 'trebuchet ms', tahoma, sans-serif;
@@ -242,7 +249,9 @@
                         </tr>
                         <tr>
                           <td align="center">
-                            <img src="./img/portrait1.png" width="88" height="88" alt="Портрет ведущего вебинар" .>
+                            <img src="https://d.radikal.ru/d29/2202/99/4a0173823255.jpg" width="88" height="88"
+                              alt="Портрет ведущего вебинар"
+                              style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                           </td>
                         </tr>
                         <tr>
@@ -269,8 +278,9 @@
                         </tr>
                         <tr>
                           <td align="center">
-                            <img src="./img/croods_proposal.png" width="278" height="278"
-                              alt="Предложение Крудса Картина в духе познего пост-модернизма Надо видеть.">
+                            <img src="https://a.radikal.ru/a15/2202/39/3828bc22379f.png" width="278" height="278"
+                              alt="Предложение Крудса Картина в духе познего пост-модернизма Надо видеть."
+                              style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                           </td>
                         </tr>
                         <tr>
@@ -336,27 +346,36 @@
                                     <tr>
                                       <td style="width:32px">
                                         <a href="#" target="blank">
-                                          <img src="./img/facebook.png" width="24" height="24" alt="Иконка фейсбук">
+                                          <img src="https://b.radikal.ru/b23/2202/9d/9f37bf55b9a3.png" width="24"
+                                            height="24" alt="Иконка фейсбук"
+                                            style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                                         </a>
                                       </td>
                                       <td style="width:32px">
                                         <a href="#" target="blank">
-                                          <img src="./img/inst.png" width="24" height="24" alt="Иконка инстаграм">
+                                          <img src="https://b.radikal.ru/b11/2202/eb/379c3ccf9385.png" width="24"
+                                            height="24" alt="Иконка инстаграм"
+                                            style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                                         </a>
                                       </td>
                                       <td style="width:32px">
                                         <a href="#" target="blank">
-                                          <img src="./img/youtube.png" width="24" height="24" alt="Иконка ютьюб">
+                                          <img src="https://d.radikal.ru/d17/2202/01/5f0f039f2e5f.png" width="24"
+                                            height="24" alt="Иконка ютьюб"
+                                            style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                                         </a>
                                       </td>
                                       <td style="width:32px">
                                         <a href="#" target="blank">
-                                          <img src="./img/telegram.png" width="24" height="24" alt="Иконка телеграм">
+                                          <img src="https://b.radikal.ru/b09/2202/ca/9fdc4a0b220f.png" width="24"
+                                            height="24" alt="Иконка ютьюб"
+                                            style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                                       </td>
                                       <td>
                                         <a href="#" target="blank">
-                                          <img src="./img/vk.png" width="24" height="24"
-                                            alt="Иконка в контакте        ">
+                                          <img src="https://d.radikal.ru/d01/2202/bc/aaeb97c9a8b5.png" width="24"
+                                            height="24" alt="Иконка в контакте"
+                                            style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                                         </a>
                                       </td>
                                     </tr>
