--- a/2-welcome/index.html
+++ b/2-welcome/index.html
@@ -34,7 +34,9 @@
                         style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#ffffff;">
                         <tr>
                           <td align="left" style="Margin:0;padding-top:55px;padding-bottom:57px;">
-                            <img src="./img/logo.png" width="140" height="24" alt="Логотип" style="Margin-left:207px;">
+                            <img src="https://b.radikal.ru/b03/2202/2e/523399b94436.png
+                            " width="140" height="24" alt="Логотип"
+                              style="display:block;border:0;outline:none;text-decoration:none;Margin-left:207px;-ms-interpolation-mode:bicubic">
                           </td>
                         </tr>
                       </table>
@@ -154,8 +156,9 @@
                               style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px; width:175px;background-color: #0b379b;">
                               <tr>
                                 <td>
-                                  <img src="./img/croods_tanding.png" width="175" height="269"
-                                    alt="Дизайнер говорит, что это Крудс стоящий">
+                                  <img src="https://b.radikal.ru/b30/2202/14/54a45a3d4d22.png" width="175" height="269"
+                                    alt="Дизайнер говорит, что это Крудс стоящий"
+                                    style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                                 </td>
                               </tr>
                             </table>
@@ -279,8 +282,9 @@
                                           style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#ffffff;">
                                           <tr>
                                             <td align="center">
-                                              <img src="./img/teacher1.png" width="88px" height="88px"
-                                                alt="Портрет сенсея">
+                                              <img src="https://b.radikal.ru/b00/2202/e6/d385502db09c.png
+                                              " width="88px" height="88px" alt="Портрет сенсея"
+                                                style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                                             </td>
                                           </tr>
                                           <tr>
@@ -297,8 +301,7 @@
                                               <p style="Margin: 0;font-family: 'trebuchet ms', tahoma, sans-serif;
                                               -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; font-size: 18px;
                                               line-height:21px;text-align:center; color:#000000;">Фронтенд-разработчик
-                                                в
-                                                Cats Development</p>
+                                                в Cats Development</p>
                                             </td>
                                           </tr>
                                         </table>
@@ -315,8 +318,9 @@
                                           style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#ffffff; ">
                                           <tr>
                                             <td align="center">
-                                              <img src="./img/teacher2.png" width="88px" height="88px"
-                                                alt="Портрет сенсея">
+                                              <img src="https://d.radikal.ru/d00/2202/f8/a62749a75bf1.png" width="88px"
+                                                height="88px" alt="Портрет сенсея"
+                                                style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                                             </td>
                                           </tr>
                                           <tr>
@@ -350,8 +354,9 @@
                                           style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#ffffff;">
                                           <tr>
                                             <td align="center">
-                                              <img src="./img/teacher3.png" width="88px" height="88px"
-                                                alt="Портрет сенсея">
+                                              <img src="https://a.radikal.ru/a16/2202/de/98e29a16ca22.png
+                                              " width="88px" height="88px" alt="Портрет сенсея"
+                                                style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                                             </td>
                                           </tr>
                                           <tr>
@@ -565,7 +570,9 @@
                               style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-spacing:0px;background-color:#ffffff;padding-bottom: 8px;">
                               <tr>
                                 <td align="center">
-                                  <img src="./img/Croods.png" alt="">
+                                  <img src="https://d.radikal.ru/d31/2202/ff/b5b5575a1240.png" width="274" height="290"
+                                    alt="Автор думал, когда писал картину.Девочка смотрит на малькадевочку в проекторе."
+                                    style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                                 </td>
                               </tr>
                             </table>
@@ -603,29 +610,36 @@
                                           <tr>
                                             <td style="width:32px">
                                               <a href="#" target="blank">
-                                                <img src="./img/facebook.png" width="24" height="24"
-                                                  alt="Иконка фейсбук">
+                                                <img src="https://b.radikal.ru/b23/2202/9d/9f37bf55b9a3.png
+                                                " width="24" height="24" alt="Иконка фейсбук"
+                                                  style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                                               </a>
                                             </td>
                                             <td style="width:32px">
                                               <a href="#" target="blank">
-                                                <img src="./img/inst.png" width="24" height="24" alt="Иконка инстаграм">
+                                                <img src="https://b.radikal.ru/b11/2202/eb/379c3ccf9385.png
+                                                " width="24" height="24" alt="Иконка инстаграм"
+                                                  style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                                               </a>
                                             </td>
                                             <td style="width:32px">
                                               <a href="#" target="blank">
-                                                <img src="./img/youtube.png" width="24" height="24" alt="Иконка ютьюб">
+                                                <img src="https://d.radikal.ru/d17/2202/01/5f0f039f2e5f.png
+                                                " width="24" height="24" alt="Иконка ютьюб"
+                                                  style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                                               </a>
                                             </td>
                                             <td style="width:32px">
                                               <a href="#" target="blank">
-                                                <img src="./img/telegram.png" width="24" height="24"
-                                                  alt="Иконка телеграм">
+                                                <img src="https://b.radikal.ru/b09/2202/ca/9fdc4a0b220f.png
+                                                " width="24" height="24" alt="Иконка телеграм"
+                                                  style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                                             </td>
                                             <td>
                                               <a href="#" target="blank">
-                                                <img src="./img/vk.png" width="24" height="24"
-                                                  alt="Иконка в контакте        ">
+                                                <img src="https://d.radikal.ru/d01/2202/bc/aaeb97c9a8b5.png
+                                                " width="24" height="24" alt="Иконка в контакте"
+                                                  style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic">
                                               </a>
                                             </td>
                                           </tr>
